fixed the search field alignment issue

--- a/styles/main.css
+++ b/styles/main.css
@@ -179,8 +179,8 @@ footer a:hover {
 
 .search {
   position: absolute;
-  right: 120px;
-  top: 115px;
+  right: 95px;
+  top: 112px;
 }
 
 .signup > button,
